test: citrus test for transaction resource
